[tool.poetry]
name = "asyncio-signal-bus-example"
version = "0.1.0"
description = ""
authors = ["dustin moriarty <dustin.moriarty@zoom.us>"]
readme = "README.md"
license = { text = "MIT" }

[tool.poetry.dependencies]
python = "^3.12"
asyncio-signal-bus = "^1.6.0"
pydantic = "^2.11.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pyyaml = "^6.0.2"
pydantic-settings = "^2.9.1"
aiocache = "^0.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I", "ASYNC"]
